# afterstep

./: .gitignore  AfterStep.desktop  AfterStep.desktop.in  AfterStep.session  AfterStep.spec  AfterStep.spec.in  COPYRIGHT  ChangeLog  ChangeLog.pre2.0  INSTALL  Makefile.in  Makefile.libs.in  NEW  README  README.HPUX  README.RedHat  README.SOLARIS  TEAM  UPGRADE  configure  configure.h.in  install.script  test.steprc
TODO/: BUGLIST.1st  BUGLIST.l8r  TODO-WinList  TODO_2.0.0
afterstep/: CREDITS  Gnome  Makefile.in  animate  asetroot.in  asmount  audio.in  autoexec.in  banner  base.15bpp.in  base.24bpp.in  base.32bpp.in  base.8bpp.in  base.in  clean  compatibility.in  database  forms  gtkrc-2.0_template  gtkrc_template  ident  kcsrc_template  pager.in  scroll  sound.in  standard_categories  wharf  wharf.in  winlist  wintabs  zharf.in
asimagelib/: .depend  Makefile.in  as_jpeg.c  as_png.c  as_xpm.c  hashtable.c  pixmap.c  rxvt.h  stepgfx.c  ximage_utils.c
autoconf/: .cvsignore  Makefile.common.in  Makefile.common.lib.in  Makefile.defines.in  acconfig.h  aclocal.m4  config.h.in  configure.in  configure.libs.in
doc/: Makefile.in  Pager.xml  Wharf.xml  WinList.xml  afterstep-1.html  afterstep-10.html  afterstep-2.html  afterstep-3.html  afterstep-4.html  afterstep-5.html  afterstep-6.html  afterstep-7.html  afterstep-8.html  afterstep-9.html  afterstep.html  afterstep.sgml  afterstep.xml  afterstepdoc.in  as20new.html  asxmlimages.html  menu.txt
include/: XImage_utils.h  afterbase.h  afterstep.h  afterstep.xpm  aftersteplib.h  asapp.h  ascolor.h  asdatabase.h  asfeel.h  asproperty.h  aswindata.h  balloon.h  clientprops.h  confdefs.h  decor.h  event.h  font.h  frame.h  functions.h  general.h  hashtable.h  hints.h  iconbg.h  misc.h  module.h  moveresize.h  myicon.h  mylook.h  myscandir.h  mystyle.h  mystyle_property.h  parse.h  parser.h  pixmap.h  screen.h  session.h  stepgfx.h  style.h  sun_headers.h  wmprops.h
lib/: .depend  .shared  ASmodule.c  Makefile.in  Xmodule.c  asapp.c  asdatabase.c  asfeel.c  asproperty.c  aswindata.c  audit.c  background.c  balloon.c  catstring3.c  clientprops.c  copystring.c  decor.c  event.c  findfile.c  font.c  freestor.c  functions.c  getcolor.c  getfdwidth.c  hints.c  homeanddirs.c  hostname.c  loadimg.c  moveresize.c  mygetostype.c  myicon.c  mylook.c  mystrcasecmp.c  mystrdup.c  mystyle.c  mystyle_property.c  outline.c  parse.c  parser.c  readpacket.c  (+9 more)
libASGTK/: .depend  .shared  Makefile.in  asgtk-config.in  asgtk.h  asgtkai.c  asgtkai.h  asgtkapp.c  asgtkapp.h  asgtkcframe.c  asgtkcframe.h  asgtkcolorsel.c  asgtkcolorsel.h  asgtkdirtree.c  asgtkdirtree.h  asgtkgradient.c  asgtkgradient.h  asgtkimagebrowser.c  asgtkimagebrowser.h  asgtkimagedir.c  asgtkimagedir.h  asgtkimageview.c  asgtkimageview.h  asgtklistviews.c  asgtklistviews.h  asgtklookedit.c  asgtklookedit.h  asgtkxmleditor.c  asgtkxmleditor.h  asgtkxmloptlist.c  asgtkxmloptlist.h  mystyle_editor_interface.c
libAfterBase/: .cvsignore  .depend  .shared  ChangeLog  Makefile.in  acconfig.h  afterbase_config.h.in  ashash.c  ashash.h  aslist.c  aslist.h  astypes.h  asvector.c  asvector.h  audit.c  audit.h  config.h.in  configure  configure.in  fs.c  fs.h  layout.c  layout.h  mystring.c  mystring.h  os.c  os.h  output.c  output.h  parse.c  parse.h  regexp.c  regexp.h  safemalloc.c  safemalloc.h  selfdiag.c  selfdiag.h  sleep.c  sleep.h  socket.c  (+11 more)
libAfterConf/: .depend  .shared  ASConfig.c  ASMount.c  ASetRoot.c  AfterStep.c  AlignBevel.c  Animate.c  Audio.c  Base.c  Clean.c  Color.c  Database.c  DesktopEntry.c  Feel.c  Ident.c  Look.c  Makefile.in  MyFrame.c  MyStyle.c  Pager.c  Sound.c  Wharf.c  WinList.c  WinTabs.c  afterconf.h  balloon.c  function.c  keyword_macro.h
libAfterImage/: .cvsignore  .depend  .shared  ChangeLog  Makefile.in  README  acconfig.h  afterbase.c  afterbase.h.in  afterimage-config.in  afterimage-libs.in  afterimage.h  ascmap.c  ascmap.h  asfont.c  asfont.h  asim_afterbase.h  asimage.c  asimage.h  asimagexml.c  asimagexml.h  asstorage.c  asstorage.h  asvisual.c  asvisual.h  blender.c  blender.h  bmp.c  bmp.h  char2uni.c  char2uni.h  config.h.in  configure  configure.in  draw.c  draw.h  export.c  export.h  imencdec.c  imencdec.h  (+21 more)
libAfterImage/aftershow/: .depend  Makefile.in  aftershow.c  aftershow.h  aftershow_pipe.c  xmlutil.c  xutil.c
libAfterImage/apps/: .cvsignore  .depend  Makefile.in  README  acconfig.h  afterimage.h.in  ascheckttf.c  ascompose.c  ascompose.man  asflip.c  asgrad.c  asi18n.c  asmerge.c  asscale.c  astext.c  astile.c  asvector.c  asview.c  asview_gl.c  common.c  common.h  config.h.in  configure  configure.in  test.xml  xpm2png.sh
libAfterImage/libjpeg/: jconfig.h  jpegint.h  jutils.c
libAfterImage/libpng/: png.h  pngconf.h  pngerror.c  pnggccrd.c  pngpread.c  pngread.c  pngrtran.c  pngrutil.c  pngset.c
libAfterImage/libungif/: dgif_lib.c  egif_lib.c  gif_err.c  gif_hash.c  gif_hash.h  gif_lib_private.h
libAfterImage/win32/: StdAfx.cpp  StdAfx.h  afterbase.h  asview.cpp  asview.dsp  asview.mak  config.h
libAfterImage/zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
libAfterStep/: .depend  .shared  ASmodule.c  Makefile.in  afterstep-config.in  afterstep.h  alpha_header.h  asapp.c  asapp.h  ascommand.c  ascommand.h  asdatabase.c  asdatabase.h  asfeel.c  asfeel.h  aswindata.c  aswindata.h  audit.c  audit.h  background.c  background.h  balloon.c  balloon.h  canvas.c  canvas.h  clientprops.c  clientprops.h  colorscheme.c  colorscheme.h  decor.c  decor.h  desktop_category.c  desktop_category.h  event.c  event.h  font.c  font.h  freestor.c  freestor.h  functions.c  (+37 more)
perl-AfterImage/: AfterImage.xs  Changes  MANIFEST  Makefile.PL  README  ppport.h  test.pl  typemap
tools/: Make8bitXPMs  Makefile.in  README.theme.handler  Uninstall-Old-AfterStep  Xpm2Jpg  ascommand.pl  bughint  cvs2cl.as.pl  git-cl.sh  importasmenu  installastheme.pl.in  makeasclean  makeaspatch  makeastheme.pl.in  makeasversion  pagerconfig1_4to1_5  postcard.sh  postcard.sh.in  testcompile.sh  (+1 more)
(+2896 files in other folders)
